# FinTectAIProject

./: .env.example  .gitignore  DEPLOY.md  PYTHON_CONCEPTS.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: secrets.toml.example
data/: knowledge_base.md
evals/: build_dataset.py  dataset.py  deepeval_metrics.py  evaluators.py  run_eval.py
scripts/: chat.py  setup_db.py
src/fintech_agent/: __init__.py  agent.py  auth.py  chat_store.py  config.py  db.py  knowledge.py  observability.py  prompts.py  tools.py  tracing.py
src/fintech_agent/safety/: __init__.py  cost.py  guardrails.py  pii.py
