[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fintech-support-agent"
version = "0.1.0"
description = "Production-ready fintech support agent: observability, evaluation, safety."
requires-python = ">=3.10"
# Runtime deps live in requirements.txt so the heavy eval/safety stack stays
# optional. Install everything with:  pip install -r requirements.txt -e .
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
